--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "ejs": "^2.3.4",
     "html-minifier": "^1.0.0",
     "lodash": "^3.10.1",
+    "marked": "^0.3.5",
     "slug": "^0.9.1"
   }
 }
